--- a/ClassLibrary1/Packet.csproj
+++ b/ClassLibrary1/Packet.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AAL.cs" />
     <Compile Include="ATMPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
