dodano klasę VPIVCI - przydatna w węźle do tablicy mapowania, a myślę że zarządca czy coś też może tego używać

--- a/ClassLibrary1/Packet.csproj
+++ b/ClassLibrary1/Packet.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="ATMPacket.cs" />
     <Compile Include="AAL.cs" />
+    <Compile Include="VPIVCI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
