dodano tutaj SPacket

--- a/ClassLibrary1/Packet.csproj
+++ b/ClassLibrary1/Packet.csproj
@@ -43,6 +43,7 @@
     <Compile Include="AAL.cs" />
     <Compile Include="PortVPIVCI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SPacket.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
